# tabcounter

./: .editorconfig  flake.nix
browseragent/: .gitignore  default.nix  package.json  rollup.config.mjs  tsconfig.json  vite.config.ts
browseragent/src/: background.ts  events.ts  lib.ts  manifest.json  manifest.ts  options.html  options.ts  socket.ts
browseragent/src/entries/background/: main.ts
browseragent/src/entries/options/: index.html  main.ts
browseragent/src/lib/: events.ts  socket.ts  state.ts
relay/: Cargo.toml  default.nix
relay/src/: main.rs
