[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.4", features = ["derive", "env"] }
discord-sdk = "0.3.4"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.20.1", features = ["stream"] }
tracing = "0.1.37"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = "0.3.17"
